--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80');">
       <h3>Explore The World</h3>
     </div>
-    <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1551582045-6ec9c11d8697?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8d2ludGVyJTIwY2l0eXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1400&q=60');">
+    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1551582045-6ec9c11d8697?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8d2ludGVyJTIwY2l0eXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1400&q=60');">
       <h3>Winter City</h3>
     </div>
-    <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bW91bnRhaW5zfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1100&q=60');">
+    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bW91bnRhaW5zfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1100&q=60');">
       <h3>Mountains</h3>
     </div>
-    
-    <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1609330861277-c66c42cf0916?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cml2ZXJzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1100&q=60');">
+
+    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1609330861277-c66c42cf0916?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cml2ZXJzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1100&q=60');">
       <h3>Rivers</h3>
     </div>
-    <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1509316785289-025f5b846b35?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzZXJ0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1100&q=60');">
+    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1509316785289-025f5b846b35?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzZXJ0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1100&q=60');">
       <h3>Desert</h3>
     </div>
   </div>
